# fue-human-centered-design

./: .gitmodules  LICENSE  ProcessExtractor.py  README.md  config.py  create_diagram_new.py  htw_process.json  htw_process_dependencies_fixed.json  htw_process_final.json  htw_process_manual.json  process-scraper.py  process.txt  process_flow.mmd  processtxt2processdiagram.py  pyproject.toml  simple_process.mmd  simple_process_2.mmd  simple_process_tmp.mmd  simple_process_with_documents.mmd  website_data.html
ProcessExtractor/: ProcessExtractor.py  README.md  config.py  example.env  process-scraper.py  processJson2MermaidDiagram.py  processJson2MermaidDiagram_old.py  process_diagram.mmd  process_flow.mmd  pyproject.toml  website_data_original.html
docs/: index.html  index.md
img/: Mermaid_process_modified.drawio
paper/: abstract.typ  shell.nix  thesis.typ
paper/common/: acronyms.typ  appendix.typ  metadata.typ  titlepage.typ
paper/common/appendix/: 1_interview_transcript.typ  2_interview_transcript.typ  htw_process.typ  process_diagram.typ
paper/literature/: literature.bib
paper/style/: style.typ
